--- a/css/site.css
+++ b/css/site.css
@@ -254,7 +254,7 @@
     background-color: rgba(0, 0, 0, 0);
     border:solid 1px #120E21;
     border-radius: 5px;
-    width: 150px;
+    width: 100%;
     height: 50px;
     color: #120E21;
     position: relative;
@@ -281,7 +281,7 @@
   }
 
   .btn-outline-filled:hover::before{
-    width: 150px;
+    width: 100%;
     top: 0%;
     left: 0%;
     height: 50px;
